Blog not appearing issue solved.

--- a/content/posts/2025-06-21.md
+++ b/content/posts/2025-06-21.md
@@ -1,9 +1,19 @@
----
-title: Welcome To My Blog
-date: 2025-06-21
-tags: none
----
++++
+date = "2025-06-21"
+title = "Test Blog 1"
+description = "Testing blog creation and hugo capabilities."
+image = "/static/images/"
+categories = ["Test"]
+authors = ["MysteryCultist"]
+draft = false
++++
 
-## Welcome
+## Overview
 
-Hey.
+Learned a few things about the website.
+
+Use hugo server -F -D so that you can see future-scheduled and draft posts.
+
+Another paragraph to test summary.
+
+And another.
