Much build, several change

--- a/content/posts/2025-06-21.md
+++ b/content/posts/2025-06-21.md
@@ -2,9 +2,11 @@
 date = "2025-06-21"
 title = "Test Blog 1"
 description = "Testing blog creation and hugo capabilities."
-image = "/static/images/"
-categories = ["Test"]
+image = "/images/icon.webp"
+imageBig = "/images/icon.webp"
+tags = ["Developer Test"]
 authors = ["MysteryCultist"]
+avatar = "/images/icon.webp"
 draft = false
 +++
 
