--- a/content/posts/2025-06-22.md
+++ b/content/posts/2025-06-22.md
@@ -2,12 +2,38 @@
 date = "2025-06-22"
 title = "Test Blog 2"
 description = "Testing blog creation and hugo capabilities."
-image = "/static/images/"
-categories = ["Test"]
+image = "/images/icon.webp"
+imageBig = "/images/icon.webp"
+tags = ["Developer Test"]
 authors = ["MysteryCultist"]
+avatar = "/images/icon.webp"
 draft = false
 +++
 
 ## Overview
 
 Hey, this is test blog post #2.
+
+Once-over of markdown.
+
+# Title
+## Title H2
+### Small title
+
+**Bold text.**
+*Italics.*
+
+> Quote text
+
+1. List item one
+2. List item two
+
+- Mhh
+- Evil
+
+`Code text.`
+
+---
+
+[Web Link](https://mysterycultist.com)
+![Image](/images/icon.webp)
