--- a/content/posts/2025-06-23.md
+++ b/content/posts/2025-06-23.md
@@ -2,8 +2,10 @@
 date = "2025-06-23"
 title = "Test Blog 3"
 description = "Testing blog creation and hugo capabilities."
-image = "/static/images/"
-categories = ["Test"]
+image = "/images/icon.webp"
+imageBig = "/images/icon.webp"
+tags = ["Unknown", "Test"]
 authors = ["MysteryCultist"]
+avatar = "/images/icon.webp"
 draft = false
 +++
