Fixes for overly-long text.

--- a/content/posts/2025-06-21.md
+++ b/content/posts/2025-06-21.md
@@ -1,7 +1,7 @@
 +++
 date = "2025-06-21"
 title = "Test Blog 1"
-description = "Testing blog creation and hugo capabilities."
+description = "Blog 1 - some notes on interesting mechanics like drafting posts."
 image = "/images/icon.webp"
 imageBig = "/images/icon.webp"
 tags = ["Developer Test"]
