--- a/content/posts/2025-06-22.md
+++ b/content/posts/2025-06-22.md
@@ -1,7 +1,7 @@
 +++
 date = "2025-06-22"
 title = "Test Blog 2"
-description = "Testing blog creation and hugo capabilities."
+description = "A rundown of commonly used markdown for future usage."
 image = "/images/icon.webp"
 imageBig = "/images/icon.webp"
 tags = ["Developer Test"]
