--- a/content/posts/2025-06-23.md
+++ b/content/posts/2025-06-23.md
@@ -1,7 +1,7 @@
 +++
 date = "2025-06-23"
 title = "Test Blog 3"
-description = "Testing blog creation and hugo capabilities."
+description = "An empty test."
 image = "/images/icon.webp"
 imageBig = "/images/icon.webp"
 tags = ["Unknown", "Test"]
