--- a/content/posts/2025-06-23 copy.md
+++ b/content/posts/2025-06-23 copy.md
@@ -1,7 +1,7 @@
 +++
 date = "2025-06-23"
 title = "Test Blog 6"
-description = "Testing blog creation and hugo capabilities."
+description = "Just a test copy with the test tag."
 image = "/images/icon.webp"
 imageBig = "/images/icon.webp"
 tags = ["Test"]
