Several changes and standardisations.

--- a/content/posts/2025-06-22.md
+++ b/content/posts/2025-06-22.md
@@ -25,8 +25,8 @@ Once-over of markdown.
 
 > Quote text
 
-1. List item one
-2. List item two
+1. cardGrid item one
+2. cardGrid item two
 
 - Mhh
 - Evil
