Text wrapping issues yet again resolved.

--- a/content/posts/2025-06-22.md
+++ b/content/posts/2025-06-22.md
@@ -2,8 +2,8 @@
 date = "2025-06-22"
 title = "Test Blog 2"
 description = "A rundown of commonly used markdown for future usage."
-image = "/images/icon.webp"
-imageBig = "/images/icon.webp"
+image = "/images/2025-06-22.webp"
+imageBig = "/images/2025-06-22.webp"
 tags = ["Developer Test"]
 authors = ["MysteryCultist"]
 avatar = "/images/icon.webp"
