--- a/content/posts/2025-06-21.md
+++ b/content/posts/2025-06-21.md
@@ -2,8 +2,8 @@
 date = "2025-06-21"
 title = "Test Blog 1"
 description = "Blog 1 - some notes on interesting mechanics like drafting posts."
-image = "/images/icon.webp"
-imageBig = "/images/icon.webp"
+image = "/images/2025-06-21.webp"
+imageBig = "/images/2025-06-21.webp"
 tags = ["Developer Test"]
 authors = ["MysteryCultist"]
 avatar = "/images/icon.webp"
