--- a/content/posts/2025-06-21.md
+++ b/content/posts/2025-06-21.md
@@ -4,11 +4,13 @@ title = "Test Blog 1"
 description = "Blog 1 - some notes on interesting mechanics like drafting posts."
 image = "/images/2025-06-21.webp"
 imageBig = "/images/2025-06-21.webp"
-tags = ["Developer Test"]
+tags = ["Devlog"]
 authors = ["MysteryCultist"]
 avatar = "/images/icon.webp"
 draft = false
 +++
+
+---
 
 ## Overview
 
