--- a/content/posts/2025-06-23-2.md
+++ b/content/posts/2025-06-23-2.md
@@ -4,11 +4,13 @@ title = "Test Blog 4 - the long, long, long, long, long, long, long, long, long,
 description = "Longform test test test test test test test test test test test test test test test test test test test test test to check text test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test wrapping."
 image = "/images/2025-06-23.webp"
 imageBig = "/images/2025-06-23.webp"
-tags = ["Developer Test"]
+tags = ["Devlog"]
 authors = ["MysteryCultist"]
 avatar = "/images/icon.webp"
 draft = false
 +++
+
+---
 
 Here's really long lines of text 
 IIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIII
