--- a/content/posts/2025-06-24.md
+++ b/content/posts/2025-06-24.md
@@ -4,7 +4,7 @@ title = 'Day four of endless coding'
 description = "I have reached the fourth day of coding and my mind buzzes with html and css. I dread the notion of needing JavaScript in the project but the day may well come."
 image = "/images/2025-06-24.webp"
 imageBig = "/images/2025-06-24.webp"
-tags = ["Untagged"]
+tags = ["Devlog"]
 authors = ["MysteryCultist"]
 avatar = "/images/icon.webp"
 draft = false
