--- a/content/posts/2025-06-22.md
+++ b/content/posts/2025-06-22.md
@@ -4,11 +4,13 @@ title = "Test Blog 2"
 description = "A rundown of commonly used markdown for future usage."
 image = "/images/2025-06-22.webp"
 imageBig = "/images/2025-06-22.webp"
-tags = ["Developer Test"]
+tags = ["Devlog"]
 authors = ["MysteryCultist"]
 avatar = "/images/icon.webp"
 draft = false
 +++
+
+---
 
 ## Overview
 
