--- a/content/posts/2025-06-23.md
+++ b/content/posts/2025-06-23.md
@@ -4,8 +4,10 @@ title = "Test Blog 3"
 description = "An empty test."
 image = "/images/icon.webp"
 imageBig = "/images/icon.webp"
-tags = ["Unknown", "Test"]
+tags = ["Devlog"]
 authors = ["MysteryCultist"]
 avatar = "/images/icon.webp"
 draft = false
 +++
+
+---
