Started writing both the cheetsheet and the first blog post introducing the main characters.

--- a/content/posts/2025-06-24.md
+++ b/content/posts/2025-06-24.md
@@ -10,6 +10,8 @@ avatar = "/images/icon.webp"
 draft = false
 +++
 
+&nbsp;
+
 ---
 
 `Eating noodles for dinner like your average software developer, feeling very in-character.`
@@ -33,7 +35,6 @@ Set up a custom email
 
 
 Cards template set up with hover and shadow (done)
-
 
 #### Inspiration from Norwegian Reggeton, Nanowar of Steel
 > She sets my heart ablaze like the arco-pyroclastic inferno of Notte La Dame. She's got eyes of a fresh-thawed Draugr and tortures my soul, enchanting my mind in violation of inter-continental treaties. She's living la vida loca as the catfolk say and she rips through my poems like a grimoir louse. She steals my breath longer than any arcane mishap.
