About card change, added tags to largebox.

--- a/content/posts/2025-06-24.md
+++ b/content/posts/2025-06-24.md
@@ -1,6 +1,6 @@
 +++
 date = '2025-06-24T18:33:00+01:00'
-title = 'Day four of endless coding'
+title = 'Coding Day 4: Fixing Markdown'
 description = "I have reached the fourth day of coding and my mind buzzes with html and css. I dread the notion of needing JavaScript in the project but the day may well come."
 image = "/images/2025-06-24.webp"
 imageBig = "/images/2025-06-24.webp"
