--- a/content/posts/2025-06-26.md
+++ b/content/posts/2025-06-26.md
@@ -4,7 +4,7 @@ title = 'An Introduction To Two Esteemed Companions'
 description = "When the fires of inspiration burn low and my passion for invention grows dim, there remain ever two steadfast pillars upon which my joy is rekindled and my wonderlust restored. Here, I present two of my most trusted companions—and offer, in addition, a humble apology for the necessity of mentioning a third."
 image = "/images/icon.webp"
 imageBig = "/images/icon.webp"
-tags = ["Devlog"]
+tags = ["World"]
 authors = ["MysteryCultist"]
 avatar = "/images/icon.webp"
 draft = false
