Write-up for some entries.

--- a/content/posts/2025-06-26.md
+++ b/content/posts/2025-06-26.md
@@ -14,6 +14,8 @@ draft = false
 
 &nbsp;
 
+# Placeholder text, unfinished
+
 ## Tehir Minchenzatht Haraldson, wise hermetic wizard
 Permit me to introduce the first and perhaps most formidable of my companions—a gentleman and scholar who delights in his solitude atop his lofty tower. Acting both as mentor and guide, he is a master in the study of the games we so ardently play. A gatherer of knowledge and guardian of forgotten lore, he is a man with whom an evening of discourse feels but a fleeting moment, no matter how many hours we while away in debate amist the early hours of the morning, the quiet hillside bathed in moonlight at the top of his lofty tower.
 
